force-app/main/default/objects/Sample_Object_1__c/Sample_Object_1__c.object-meta.xml
<CustomObject>
    <label>Sample Object 1</label>
    <nameField>
        <label>Sample Object 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Object 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>