force-app/main/default/objects/Sample_Object_1__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Object 1</relationshipLabel>
    <relationshipName>Sample_Object_1</relationshipName>
    <type>Lookup</type>
</CustomField>