force-app/main/default/objects/Sample_Object_1__c/fields/Total_Junction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Junction_Amount__c</fullName>
    <label>Total Junction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>