force-app/main/default/objects/Sample_Object_1__c/fields/Total_Rollup_Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Rollup_Summary_Field__c</fullName>
    <label>Total Rollup Summary Field</label>
    <summaryForeignKey>Sample_Junction_Object__c.Sample_Object_1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>