force-app/main/default/objects/Sample_Object_1__c/recordTypes/Sample_record_type.recordType-meta.xml
<RecordType>
    <fullName>Sample_record_type</fullName>
    <active>true</active>
    <label>Sample record type</label>
</RecordType>