force-app/main/default/objects/Sample_Object_1__c/recordTypes/Sample_record_type_2.recordType-meta.xml
<RecordType>
    <fullName>Sample_record_type_2</fullName>
    <active>true</active>
    <label>Sample record type 2</label>
</RecordType>