force-app/main/default/objects/Sample_Object_1__c/listViews/New_queue_Sample_Object_1.listView-meta.xml
<ListView>
    <fullName>New_queue_Sample_Object_1</fullName>
    <filterScope>Queue</filterScope>
    <label>New queue</label>
    <queue>New_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>